posters added and some styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Glo-Kino</title>
 </head>
 <body>
+    <style>
+    img{
+        max-width: 100%;
+    }
+    .item{
+        margin: 1rem, 0;
+        text-align: center;
+        
+    }
+    </style>
     <nav class="navbar">
         <div class="container">
             <a href="index.html" class="navbar-brand">Glo-Kino</a>
