--- a/index.html
+++ b/index.html
@@ -12,10 +12,25 @@
     img{
         max-width: 100%;
     }
+    .img_poster{
+        height: 350px;
+    }
     .item{
         margin: 1rem, 0;
         text-align: center;
         
+    }
+    .spinner{
+        margin: 0 auto;
+        width: 100px;
+        height: 100px;
+        border: 10px dashed;
+        border-radius: 50%;
+        border-left-color: transparent;
+        border-top-color: #aaa;
+        border-right-color: #555;
+        border-bottom-color: #000;
+        animation: spin 500ms infinite linear;
     }
     </style>
     <nav class="navbar">
