день 3 не работает ссылка на имдб и оф.сайт

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         border-bottom-color: #000;
         animation: spin 500ms infinite linear;
     }
+    @keyframes spin{
+        100%{
+            transform: rotate(360deg)
+        }
+    }
     </style>
     <nav class="navbar">
         <div class="container">
