--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div id="movies" class="row"></div>
     </div>
 </div>
-<script src="./script.js"></script>
+<script src="./sx2.js"></script>
 
 </body>
 </html>
