--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Glo-Kino</title>
+    <title>Найди фильм</title>
 </head>
 <body>
     <style>
@@ -54,7 +54,7 @@
     <div id="movies" class="row"></div>
     </div>
 </div>
-<script src="./script2.js"></script>
+<script src="/Movies-search/script2.js"></script>
 
 </body>
 </html>
