--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div id="movies" class="row"></div>
     </div>
 </div>
-<script src="/Movies-search/sx2.js"></script>
+<script src="/Movies-search/script2.js"></script>
 
 </body>
 </html>
