--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
     }
     </style>
 <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-lg scrolling-navbar">
-    <div class="w-100">
+    <div class="container d-flex justify-content-between">
         <div class="container">
             <a href="index.html" class="navbar-brand">My Kino</a>
         </div>
         <!-- <span style="float:right; width:80%"> -->
-        <span>
+        <span class="container-fluid">
             <form class="form-inline" id='search-form'>
                 <input type="text" class="form-control mr-sm-2" id="searchText" placeholder="Введите название...">
             </form>
         </span>
+        
         <button class="navbar-toggler" type="button"
             data-toggle="collapse" data-target="#navbarContent"
             aria-controls="navbarContent" aria-expanded="false"
