--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- <span style="float:right; width:80%"> -->
         <span class="container-fluid">
             <form class="form-inline" id='search-form'>
-                <input type="text" class="form-control mr-sm-2" id="searchText" placeholder="Введите название...">
+                <input type="text" class="form-control mr-sm-2" id="searchText" placeholder="Введите название..." style="width: 100%;"
             </form>
         </span>
         
